# CSV_Cleaner

./: .gitignore  README.md  main.py  pyproject.toml
src/csvclean/: __init__.py  cli.py
src/csvclean/IO_layer/: __init__.py  csv_io_layout.py
src/csvclean/cleaners/: __init__.py  cleaner.py  duplicate_cleaner.py  null_cleaner.py  null_cleanerold.py  pruebas.ipynb  test_cleaners.py
src/csvclean/models/: __init__.py  config.py  data_register.py
src/csvclean/reporters/: __init__.py  cleaning_report.py
src/csvclean/validators/: __init__.py  base_validator.py  data_validator.py  null_validator.py  type_validator.py  validator_manager.py
tests/csvclean/test_cleaners/: test_ceaner.py
tests/csvclean/test_io_layer/: test_csv_io_layout.py
tests/csvclean/test_reporters/: test_cleaning_report.py
tests/csvclean/test_validators/: test_null_validator.py  test_type_validator.py  test_validator_manager.py
tests/fixtures/: clean_clean.csv  config.txt  dirty_data.csv  report.txt
