[project]
name = "csvclean"
version = "0.1.0"
description = "A tool for cleaning and validating CSV files that detects data quality issues and applies automatic corrections."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "pytest>=7.4.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
